# Varformer

./: .gitignore  README.md  preprocessing.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmark/: README.md  compare.py  diagnose.py  drugnome_ai_testing.py  generate_reference.py  run_benchmark.sh  run_benchmark_andrena.sh
benchmark/inputs/: elgh_genes.txt  nfe_genes.txt
configs/: default.yml
configs/paths/: hpc.example.yml  hpc.yml  local.example.yml  local.yml
models/opentargets/: explain.py  model.py
notebooks/: hyperparameter_analysis.ipynb
paper/baselines/: __init__.py  drugnome_ai.py  logistic_regression.py  preprocessor.py  random_baseline.py
scripts/: generate_esm_embeddings.py  run_inference.py  run_training.py  run_training.sh  run_training_andrena.sh
scripts/data_prep/: README.md  gnomad_vep_parser.py  vcf_parser.py
src/: cluster_config.yml  cluster_config_afr.yml  cluster_config_amr.yml  cluster_config_elgh.yml  cluster_config_nfe.yml  config.py  config.yml  dataloader.py  inference.py  loss.py  main.py  model.py  plot.py  preprocessing.py  proc_vcf.py  puupl.py  testing.py  train.py  training.py  utils.py
src/autoencoders/: ae.py  ae_train.py  ae_training.py  autoencoder.py  vae.py  vae_training.py
src/legacy_code/: dataloader.py  puupl.py
src/models/: lightning.py  target_identifier.py  varformer.py
src/opentargets_feature_importance/: explain.py  model.py  shap.py  sm_model.py
src/utils/: custom_callbacks.py  eval.py  file_operations.py  gnomad_vep_parser.py  legacy.py  merge_am_data.py  preprocessing.py  utils.py
tests/: conftest.py  test_checkpoints.py  test_config.py  test_sdk.py
tests/test_models/: test_attention.py  test_g2v_attention.py  (+3 more)
varformer/: __init__.py  checkpoints.py  config.py
(+95 files in other folders)
