[project]
name = "varformer"
version = "0.2.0"
description = "Gene tractability prediction from population genetic variants."
authors = [{ name = "Aaron Wenteler" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    # === core ML stack — EXACT pins, do not relax (benchmark parity depends on these) ===
    "torch==2.1.1",
    "pytorch-lightning==2.1.1",
    "torchmetrics==1.2.0",
    "numpy==1.23.5",
    "pandas==2.0.0",
    "scipy==1.10.1",
    "scikit-learn==1.2.2",

    # === data / IO ===
    "biopython==1.81",
    "biorosetta==0.3.2",
    "biothings-client==0.4.1",
    "cyvcf2>=0.31.1",
    "polars==1.31.0",
    "pyarrow==21.0.0",
    "pysam==0.22.1",
    "pyyaml==6.0.1",
    "requests>=2.28.2",
    "openpyxl==3.1.5",

    # === modeling extras ===
    "fair-esm==2.0.0",
    "optuna==3.4.0",
    "shap==0.41.0",
    "xgboost==1.7.5",
    "umap-learn==0.5.4",
    "wandb==0.16.0",

    # === plotting ===
    "matplotlib==3.7.1",
    "seaborn==0.12.2",
    "plotly>=6.5.2",
    "kaleido>=1.2.0",
    "adjustText==1.3.0",
    "statsmodels>=0.14.5",

    # === utility ===
    "tabulate==0.9.0",
    "tqdm==4.65.0",
    "numba==0.60.0",

    # === added in §4.5 of the refactor design ===
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]
notebook = [
    "notebook>=7.4.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["varformer*"]
exclude = ["benchmark*", "tests*", "paper*", "notebooks*", "scripts*", "src*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
